--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,9 @@
 	/* startje */
 	--color-text:#111;
 	--color-background:#eee;
+	--pink-color: hotpink;
+	--orange-color: orange;
+	/* moet nog even de preciese kleurcodes opzoeken hoor*/
 }
 
 
