--- a/styles/style.css
+++ b/styles/style.css
@@ -155,7 +155,7 @@ h1{
 h2{
 	font-family: "dunkin sans";
 	display: grid;
-
+	
 	color: var(--pink-color);	
 }
 
@@ -192,6 +192,8 @@ main section:nth-of-type(1) {
 
 section:nth-of-type(1) h2 {
 	text-align:center;
+	font-size: 4em;
+	color: var();
 	padding:6em 0;
 }
 
@@ -253,18 +255,48 @@ main section:nth-of-type(2) {
 
 main section:nth-of-type(2) h2{
 	color: #ffffff;
-	
+	font-size: 4em;
 	align-items: center;
 	justify-content: center;
 }
 
 main section:nth-of-type(2) p{
 	color: #ffffff;
+	padding: 1em;
+	text-align:left;
 }
 
-main section:nth-of-type(2) p{
+main section:nth-of-type(2) a{
+	padding: 1em;
+	color: #ffffff;
+	background-color: #512d0e;
+	text-decoration: none;
+	border-radius: 2em;
+}
+
+main section:nth-of-type(2) a + a{
+	
+	background-color: #ddbd8e;
 	color: #ffffff;
 }
+
+/****************/
+/* STYLING NIEUW */
+/****************/
+
+main section:nth-of-type(1) {
+
+
+}
+
+
+section:nth-of-type(3) h2 {
+	text-align:center;
+	
+}
+
+
+
 
 
 /******************/
@@ -272,21 +304,20 @@ main section:nth-of-type(2) p{
 /******************/
 
 footer{
-	padding: 2em;
+	padding: 7em 2em 2em 2em;
+	margin-top: 7em;
 	position: relative;
 	background-color: var(--darkorange-color);
 }
 
 footer > img{
 	position: absolute;
+	
 	height: 40%;
 
-
-	top: -8em;
-	right: 8em;
-
-	justify-content: center;
-	align-items:center;
+	top: 0;
+	right: 50%;
+	transform: translate(50%, -50%) rotate(-20deg); 
  
 	padding:.25em;
 	background-color: var(--grey-brackground-color);
@@ -294,12 +325,8 @@ footer > img{
 
 	border-radius: 8em;
 	border: none;
-	transform: rotate(-20deg)
 }
 
-footer section:nth-of-type(1){
-	
-}
 
 footer section:nth-of-type(1) a{
 	padding: 1em;
@@ -320,10 +347,16 @@ footer section:nth-of-type(1) a{
 
 footer section:nth-of-type(2) {
 	display: flex;
+	
 	background-color: var(--grey-brackground-color);
 
 }
 footer section:nth-of-type(2) a{
+	padding-left: 1em;
 	text-decoration: none;
 	color: var(--grey-text-color);
+}
+
+footer section:nth-of-type(2) a + a{
+	border-left: solid 1px lime;
 }
