--- a/styles/style1.0.css
+++ b/styles/style1.0.css
@@ -27,6 +27,12 @@
 	--grey-brackground-color: #f5f5f5;
 	--grey-text-color: #adadad;
 	--blue-background-color: #99d6ea;
+	--coffee-background-color: #ddbd8e;
+	--darkcoffee-backgroun-color: #d6b687;
+
+	--font-size-h2: 4em;
+	--font-size-h3: 2em;
+	--font-size-p: 1em;
 }
 
 /****************************************/
@@ -149,7 +155,7 @@ nav button img {
 	height: .5em;
 }
 
-@media (min-width:38em) {
+@media (min-width:48em) {
 header > button {
 	position: absolute;
 	left: -9999em;
@@ -191,6 +197,7 @@ header > a:last-of-type {
 * {
 	font-family: "dunkin sans", "arial";
 	text-transform: uppercase;
+	
 }
 
 
@@ -225,7 +232,9 @@ p{
 main section:nth-of-type(1) {
 
 	display:grid;
-	
+	grid-template-rows:max-content min(24em, 50vw);
+
+	border-radius: 2em;
 	
 	overflow:hidden;
 
@@ -233,16 +242,18 @@ main section:nth-of-type(1) {
 		repeating-conic-gradient(
 			at 50% 75%,
 			#ddbd8e,
-			white,
+			#d6b687,
 			#ddbd8e 5%
 		)
 }
 
 section:nth-of-type(1) h2 {
+	color: var(--white-background-color);
 	text-align:center;
-	font-size: 4em;
+	font-size: var(--font-size-h2);
 	color: var();
-	padding:6em 0;
+	padding: .5em 0 ;
+	margin:0;
 }
 
 
@@ -254,7 +265,7 @@ section:nth-of-type(1) img {
 	grid-column-start:1;
 
 	justify-self:center;
-	align-self:end;
+	/* align-self:end; */
 }
 
 section:nth-of-type(1) img:nth-of-type(1) {
@@ -264,26 +275,47 @@ section:nth-of-type(1) img:nth-of-type(1) {
 
 section:nth-of-type(1) img:nth-of-type(2) {
 	width:40%;
-	translate: 50% 25%;
+	z-index:1;
 }
 
 section:nth-of-type(1) img:nth-of-type(3) {
-	width:50%;
-	z-index:1;
+	width:40%;
+	
+	translate: 50% 25%;
 }	
 
-@media (width > 40em) {
+@media (width > 48em) {
+
+	main {
+		display:grid;
+		grid-template-columns: repeat(13, 1fr);
+		gap:.5em;
+	}
+
+	/* alle sections hele breedte */
+	main section {
+		grid-column:1/ -1;
+	}
+
 	section:nth-of-type(1) {
-		background-color:pink;
+		
+
+		grid-column:2/ 8;
+		grid-row:1/4;
 	}
 	
-	section:nth-of-type(1) img:nth-of-type(1) {
+	/* section:nth-of-type(1) img:nth-of-type(1) {
 		translate: -60%;
 	}
 
 	section:nth-of-type(1) img:nth-of-type(2) {
 		translate: 60%;
-	}
+	} */
+
+	
+
+
+	
 }
 
 /****************/
@@ -303,8 +335,10 @@ main section:nth-of-type(2) {
 }
 
 main section:nth-of-type(2) h2{
+	margin: .5em;
+
 	color: #ffffff;
-	font-size: 4em;
+	font-size: var(--font-size-h2);
 	align-items: center;
 	justify-content: center;
 }
@@ -338,6 +372,15 @@ main section:nth-of-type(2) a:hover{
 	
 }
 
+@media (width > 48em) {
+
+	section:nth-of-type(2) {
+		grid-column:8/ 13;
+		grid-row:1/1;
+	}
+}
+
+
 
 /****************/
 /* STYLING NIEUW */
@@ -345,8 +388,6 @@ main section:nth-of-type(2) a:hover{
 
 main section:nth-of-type(3) {
 	
-	height: 80vh;
-
 	background-color: var(--blue-background-color);
 	border-radius: 2em;
 	
@@ -354,19 +395,150 @@ main section:nth-of-type(3) {
 
 
 section:nth-of-type(3) h2 {
+	margin: 0;
 	
 	text-align:center;
-	font-size: 4em;
+	font-size: var(--font-size-h2);
 
 	color: var(--white-background-color);
-	
-	
 }
 
 section:nth-of-type(3) img {
-	
-	height: 70vh;
+	width: 100%;
+	height: auto;
 }
+
+@media (width > 48em) {
+
+	section:nth-of-type(3) {
+		
+		grid-column:8/ 13;
+		grid-row:2/4;
+	}
+
+	
+}
+
+/****************/
+/* STYLING BESTEL DUNKIN ONLINE */
+/****************/
+
+main section:nth-of-type(4) {
+	
+	background-color: var(--grey-brackground-color);
+	
+}
+
+main section:nth-of-type(4) h2 {
+	
+	font-size: var(--font-size-h2);
+	line-height: 1em;
+	padding: .5em;
+	margin: 0;
+}
+
+main section:nth-of-type(4) ul {
+	list-style-type:none;
+	padding: 1em;
+	margin: 0;
+}
+
+main section:nth-of-type(4) li {
+	display: grid;
+
+	padding: 1em;
+	margin-top: 1.5em;
+	margin-bottom: 1.5em;
+
+	background-color: var(--white-background-color);
+	border-radius: 2em;
+}
+
+main section:nth-of-type(4) h3 {
+	margin: 0;
+
+	color: var(--pink-color);
+
+	grid-column: 2/3;
+	grid-row: 1/2;
+
+}
+
+main section:nth-of-type(4) p {
+	
+
+	grid-column: 2/3;
+	grid-row: 2/3;
+}
+
+main section:nth-of-type(4) img {
+
+	grid-column: 1.5/2.5;
+	grid-row: 1/3;
+
+
+	align-items: center;
+	justify-content: space-between;
+
+	margin: .5em;
+	padding: 1em;
+	width: 4em;
+	height: 4em;
+
+	background-color: var(--pink-button-color);
+	border-radius: 2em;
+	border: none;
+}
+
+main section:nth-of-type(4) button {
+
+	width: 100%;
+	padding: 1em;
+	margin: .5em;
+
+	text-align: center;
+	text-decoration: none;
+	font-size: large;
+	font-weight: bold;
+
+	align-items: center;
+	justify-content: center;
+	
+	color: var(--white-background-color);
+	background-color: var(--orange-color);
+	border: none;
+	border-radius: 2em;
+}
+
+@media (width > 48em) {
+
+main section:nth-of-type(4){
+	display: flex;
+}
+
+main section:nth-of-type(4) h2{
+	
+}
+
+main section:nth-of-type(4) ul{
+	display: grid;
+	grid-template-columns: repeat(8), 1fr);
+}	
+
+main section:nth-of-type(4) ul li:first-of-type{
+	grid-column: 4/9;
+}
+
+main section:nth-of-type(4) ul li:nth-last-of-type(2){
+	grid-column: 3/8;
+}
+
+
+main section:nth-of-type(4) ul li:last-of-type{
+	grid-column: 4/9;
+}
+
+
 
 
 
