--- a/styles/style1.0.css
+++ b/styles/style1.0.css
@@ -29,15 +29,59 @@
 	--blue-background-color: #99d6ea;
 	--coffee-background-color: #ddbd8e;
 	--darkcoffee-backgroun-color: #d6b687;
+	--state-color: lime; 
 
 	--font-size-h2: 4em;
 	--font-size-h3: 2em;
 	--font-size-p: 1em;
+
+
+
 }
 
 /****************************************/
 /*              STYLING                 */
 /****************************************/
+
+/****************/
+/* algemeen */
+/****************/
+
+* {
+	font-family: "dunkin sans", "arial";
+	text-transform: uppercase;
+	margin: 0;
+}
+
+main{
+	padding: 1.5em;
+}
+
+header{
+	padding: 1.5em;
+}
+
+h1{
+	color: var(--orange-color);
+}
+
+h2{
+	font-family: "dunkin sans";
+	display: grid;
+	
+	color: var(--pink-color);	
+}
+
+h2 em{
+	font-style: normal;
+
+	color: var(--orange-color);	
+}
+
+p{
+	color: var(--grey-text-color);
+}
+
 
 /*************************/
 /* HEADER*/
@@ -47,6 +91,7 @@ header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	/* flex-wrap: wrap; */
 }
 
 
@@ -70,6 +115,52 @@ header button img {
 
 header button:nth-of-type(2) {
 	order: -1;
+}
+
+header > a:last-of-type{
+	padding: 1em;
+	margin: .5em;
+	display: flex;
+	flex-direction:column;
+
+	font-weight: bold;
+
+	background-color: var(--orange-color);
+	color: var(--white-background-color);
+
+	border-radius: 2em;
+}
+
+
+header > a:last-of-type:hover{
+	transform: scale(1.1);
+}
+
+header > a:last-of-type:focus{
+  outline: none;
+  box-shadow: 0 0 0 .25em var(--state-color);
+}
+
+@media (width < 48em) {
+
+	header > a:last-of-type {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin: 1em;
+
+		position: absolute;
+		left: 9999em;
+		
+    	background-color: var(--orange-color);
+    	justify-content: center;
+    	
+   		bottom: 0;
+    	left: 0;
+    	right: 0;
+    	position: fixed;
+	}
+
 }
 
 /*************************/
@@ -114,6 +205,7 @@ nav a {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	
 	flex-direction: column;
 	column-gap: .5em;
 
@@ -123,26 +215,35 @@ nav a {
 	font-size: x-large;
 	font-weight: bold;
 
-	color: #512d0e;
+	color: var(--nav-text-color);
 	text-decoration: none;
 }
 
+nav  a:focus{
+	outline: none;
+	box-shadow: 0 0 0 .25em var(--state-color);
+}
 
-nav ul:nth-last-of-type(1) img{
-	
+
+nav li:last-of-type {
+	display: flex;
+
 	align-items: center;
 	justify-content: center;
+}
 
+
+nav ul li:last-of-type button img{
 	padding: 1em;
 	width: 4em;
 	height: 4em;
 
-	background-color: #512d0e;
+	background-color: var(--nav-text-color);
 	border-radius: 2em;
 	border: none;
 }
 
-nav button {
+nav li button {
 	
 	padding:.5em;
 	width: 4em;
@@ -156,10 +257,11 @@ nav button img {
 }
 
 @media (min-width:48em) {
-header > button {
-	position: absolute;
-	left: -9999em;
-}
+	header > button {
+		position: absolute;
+		left: -9999em;
+	}
+
 	
 nav {
 	position: static;
@@ -177,49 +279,18 @@ nav button {
 nav ul {
 	display: flex;
 	gap: .5em;
-	  
+	flex-wrap: wrap;  
 }
 	
 nav a {
 	border: none;
 	flex-direction: column;
 }
+
 	
 header > a:last-of-type {
 	flex-direction: column;
 }
-}
-
-/****************/
-/* algemeen */
-/****************/
-
-* {
-	font-family: "dunkin sans", "arial";
-	text-transform: uppercase;
-	
-}
-
-
-h1{
-	color: var(--orange-color);
-}
-
-h2{
-	font-family: "dunkin sans";
-	display: grid;
-	
-	color: var(--pink-color);	
-}
-
-h2 em{
-	font-style: normal;
-
-	color: var(--orange-color);	
-}
-
-p{
-	color: var(--grey-text-color);
 }
 
 
@@ -230,7 +301,7 @@ p{
 
 
 main section:nth-of-type(1) {
-
+	margin-bottom: 1em;
 	display:grid;
 	grid-template-rows:max-content min(24em, 50vw);
 
@@ -251,7 +322,6 @@ section:nth-of-type(1) h2 {
 	color: var(--white-background-color);
 	text-align:center;
 	font-size: var(--font-size-h2);
-	color: var();
 	padding: .5em 0 ;
 	margin:0;
 }
@@ -304,6 +374,7 @@ section:nth-of-type(1) img:nth-of-type(3) {
 		grid-row:1/4;
 	}
 	
+
 	/* section:nth-of-type(1) img:nth-of-type(1) {
 		translate: -60%;
 	}
@@ -325,6 +396,8 @@ section:nth-of-type(1) img:nth-of-type(3) {
 main section:nth-of-type(2) {
 	
 	width: auto;
+	padding: 1em;
+	
 
 	background-color: var(--pink-color);
 	
@@ -335,7 +408,7 @@ main section:nth-of-type(2) {
 }
 
 main section:nth-of-type(2) h2{
-	margin: .5em;
+	margin-top: .5em;
 
 	color: #ffffff;
 	font-size: var(--font-size-h2);
@@ -349,28 +422,30 @@ main section:nth-of-type(2) p{
 	text-align:left;
 }
 
-main section:nth-of-type(2) a{
+main section:nth-of-type(2) button{
+	
 	padding: 1em;
+    margin: 1em;
+
+    font-weight: bold;
+
 	color: var(--pink-color);
 	background-color: var(--white-background-color);
-	text-decoration: none;
-	border-radius: 2em;
+
+	border-radius: 2em;	
+    border: none;
 	
 }
 
-main section:nth-of-type(2) a:hover{
-	
+main section:nth-of-type(2) button:hover{
+	transform: scale(1.1);
 }
 
-main section:nth-of-type(2) a + a{
-	
-	background-color: var(--pink-button-color);
-	color: #ffffff;
+main section:nth-of-type(2) button:focus {
+  outline: none;
+  box-shadow: 0 0 0 .25em var(--state-color);
 }
 
-main section:nth-of-type(2) a:hover{
-	
-}
 
 @media (width > 48em) {
 
@@ -387,7 +462,7 @@ main section:nth-of-type(2) a:hover{
 /****************/
 
 main section:nth-of-type(3) {
-	
+	margin-top: 2em;
 	background-color: var(--blue-background-color);
 	border-radius: 2em;
 	
@@ -395,7 +470,6 @@ main section:nth-of-type(3) {
 
 
 section:nth-of-type(3) h2 {
-	margin: 0;
 	
 	text-align:center;
 	font-size: var(--font-size-h2);
@@ -476,10 +550,6 @@ main section:nth-of-type(4) img {
 	grid-column: 1.5/2.5;
 	grid-row: 1/3;
 
-
-	align-items: center;
-	justify-content: space-between;
-
 	margin: .5em;
 	padding: 1em;
 	width: 4em;
@@ -501,8 +571,6 @@ main section:nth-of-type(4) button {
 	font-size: large;
 	font-weight: bold;
 
-	align-items: center;
-	justify-content: center;
 	
 	color: var(--white-background-color);
 	background-color: var(--orange-color);
@@ -510,19 +578,26 @@ main section:nth-of-type(4) button {
 	border-radius: 2em;
 }
 
+main section:nth-of-type(4) button:hover{
+	transform: scale(1.1);
+}
+
+main section:nth-of-type(4) button:focus{
+  outline: none;
+  box-shadow: 0 0 0 .25em var(--state-color);
+}
+
 @media (width > 48em) {
 
 main section:nth-of-type(4){
 	display: flex;
+	position: relative;
 }
 
-main section:nth-of-type(4) h2{
-	
-}
 
 main section:nth-of-type(4) ul{
 	display: grid;
-	grid-template-columns: repeat(8), 1fr);
+	grid-template-columns: repeat(8), (1fr);
 }	
 
 main section:nth-of-type(4) ul li:first-of-type{
@@ -541,43 +616,77 @@ main section:nth-of-type(4) ul li:last-of-type{
 }
 
 
+/****************/
+/* STYLING DD NIEUWS */
+/****************/
 
-/******************/
-/* STYLING FOOTER */
-/******************/
-
-footer{
-	padding: 7em 2em 2em 2em;
-	margin-top: 7em;
-	position: relative;
-	background-color: var(--darkorange-color);
-}
-
-footer > img{
-	position: absolute;
-	
-	height: 40%;
-
-	top: 0;
-	right: 50%;
-	transform: translate(50%, -50%) rotate(-20deg); 
- 
-	padding:.25em;
+main section:nth-of-type(5){
 	background-color: var(--grey-brackground-color);
-	box-shadow:.25em .25em .25em var(--text-color); 
 
-	border-radius: 8em;
-	border: none;
+	display: flex;
+	gap: 1em;
+	flex-direction: column;
+	
+	overflow-x: auto;
+
+	
+}
+
+main section:nth-of-type(5) h2{
+	font-size: var(--font-size-h2);
+	margin: 0;
+}
+
+main section:nth-of-type(5) ul{
+	display:flex;
+	gap: 1em;
+	overflow:auto;
+
+
+	scroll-snap-type:x mandatory;
+	overscroll-behavior-x:contain;
+	scroll-behavior:smooth;
+}
+
+main section:nth-of-type(5) li{
+	display: grid;
+
+	border: .2em solid var(--grey-text-color);
+	border-radius: 2em;
+
+	list-style: none;
+
+	scroll-snap-align:center;
+	flex-shrink:0;
+	width:100%;
+}
+
+main section:nth-of-type(5) li img {
+	padding: 1em;
+	width: 100%;
+
+	/* border: .5em solid ; */
+	border-radius: 2em;
+
+
+	object-fit: cover;
+	object-position: center;
+
+	order: -1;
 }
 
 
-footer section:nth-of-type(1) a{
-	padding: 1em;
+main section:nth-of-type(5) li p {
+	width: 40%;
+	padding: .5em;
 	margin: .5em;
+
 	display: flex;
 
-	text-align: center;
+	/* text-align: center; */
 	text-decoration: none;
+	font-size: large;
+	font-weight: bold;
 
 	align-items: center;
 	justify-content: center;
@@ -588,35 +697,165 @@ footer section:nth-of-type(1) a{
 	border-radius: 2em;
 }
 
-footer section:nth-of-type(2) {
-	display: flex;
-	
-	background-color: var(--grey-brackground-color);
-
-}
-footer section:nth-of-type(2) a{
-	
-	padding-left: .25em;
-	padding-right: .25em;
-	
-	text-decoration: none;
-	color: var(--grey-text-color);
-	background-color: var(--grey-brackground-color);
-}
-
-footer section:nth-of-type(2) a + a{
-	border-left: solid 1px var(--text-color);
-}
-
-footer aside img{
-	align-items: center;
-	justify-content: center;
-
+main section:nth-of-type(5) li h3 {
 	padding: 1em;
-	width: 4em;
-	height: 4em;
-
-	background-color: var(--white-background-color);
-	border-radius: 2em;
-	border: none;
 }
+
+main section:nth-of-type(5) button {
+	padding: .5em;
+	width: 4em;
+
+	color: var(--grey-brackground-color);
+	background-color: var(--grey-text-color);
+
+	border: none;
+	border-radius: 1em;
+}
+
+main section:nth-of-type(5) button:last-of-type {
+
+
+	width: 100%;
+	padding: 1em;
+	margin: .5em;
+
+	text-align: center;
+	text-decoration: none;
+	font-size: large;
+	font-weight: bold;
+
+	
+	color: var(--white-background-color);
+	background-color: var(--orange-color);
+	border: none;
+	border-radius: 2em;
+}
+
+main section:nth-of-type(5) button:hover{
+	transform: scale(1.1);
+}
+
+main section:nth-of-type(5) button:focus {
+  outline: none;
+  box-shadow: 0 0 0 .25em var(--state-color);
+}
+
+/******************/
+/* STYLING FOOTER */
+/******************/
+
+footer{
+    padding: 7em 2em 2em 2em;
+    margin-top: 5em;
+    position: relative;
+    background-color: var(--darkorange-color);
+}
+
+footer section:nth-of-type(1) img{
+    position: absolute;
+    
+    height: 40%;
+
+    top: 0;
+    right: 50%;
+    transform: translate(50%, -50%) rotate(-20deg); 
+
+    padding:.25em;
+    background-color: var(--grey-brackground-color);
+    box-shadow:.25em .25em .25em var(--text-color); 
+
+    border-radius: 8em;
+    border: none;
+}
+
+
+footer section:nth-of-type(2) a{
+    padding: 1em;
+    margin: .5em;
+    display: flex;
+
+    text-align: center;
+    text-decoration: none;
+
+    align-items: center;
+    justify-content: center;
+    
+    color: var(--white-background-color);
+    background-color: var(--orange-color);
+    border: none;
+    border-radius: 2em;
+}
+
+footer section:nth-of-type(3) {
+    display: flex;
+    gap: .5em;
+    flex-wrap: wrap;
+
+    justify-content: center;
+}
+
+
+footer section:nth-of-type(3) img{
+
+    padding: 1em;
+    width: 4em;
+    height: 4em;
+
+    background-color: var(--white-background-color);
+    border-radius: 2em;
+    border: none;
+}
+
+
+footer section:nth-of-type(4) {
+    display: flex;
+    
+    background-color: var(--grey-brackground-color);
+
+}
+footer section:nth-of-type(4) a{
+    
+    padding-left: .25em;
+    padding-right: .25em;
+    
+    text-decoration: none;
+    color: var(--grey-text-color);
+    background-color: var(--grey-brackground-color);
+}
+
+footer section:nth-of-type(4) a + a{
+    border-left: solid 1px var(--text-color);
+}
+
+footer  a:focus{
+	outline: none;
+	box-shadow: 0 0 0 .25em var(--state-color);
+}
+
+@media (width > 48em) {
+
+footer{
+    padding: 1em ;
+    display: grid;
+    gap: 1em;
+    
+    /* grid-template-columns: repeat(4), (1fr); */
+}
+
+
+footer section:nth-of-type(2) {
+    display: flex;
+    justify-content: center;
+
+}
+
+footer section:nth-of-type(2) a{
+    border-radius: 0;
+    display: flex;
+    justify-content: center;
+    
+}
+
+
+}
+
