--- a/styles/style_3.0.css
+++ b/styles/style_3.0.css
@@ -31,6 +31,7 @@ box-sizing:border-box;
     --darkcoffee-backgroun-color: #d6b687;
     --state-color: lime; 
 
+    --font-size-h1: 6em;
     --font-size-h2: 4em;
     --font-size-h3: 2em;
     --font-size-p: 1em;
@@ -77,24 +78,13 @@ main{
 }
 
 header{
-    padding: 1.5em;
+    padding: 1em;
 }
 
 h1{
-    color: var(--orange-color);
-}
-
-h2{
-    font-family: "dunkin sans";
-    display: grid;
-    
-    color: var(--pink-color);	
-}
-
-h2 em{
-    font-style: normal;
-
-    color: var(--orange-color);	
+    color: var(--white-background-color);
+    font-weight: bold;
+    font-size: var( --font-size-h1);
 }
 
 p{
@@ -187,7 +177,7 @@ header > a:last-of-type:focus{
 /*************************/
 
 
-nav{
+header nav {
     font-family: "dunkin sans", "arial";
     
     padding: 1em;
@@ -210,17 +200,17 @@ nav{
 
 }
 
-nav.toonMenu{
+header nav.toonMenu{
     translate: 0%;
 }
 
 /* linkjes in de navigatie>menu */
 
-nav li {
+header nav li {
     list-style-type: none;
 }
 
-nav a {
+header nav a {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -238,7 +228,7 @@ nav a {
     text-decoration: none;
 }
 
-nav  a:focus{
+header nav a:focus{
 	outline: none;
 	box-shadow: 0 0 0 .25em var(--state-color);
 }
@@ -246,7 +236,7 @@ nav  a:focus{
 
 
 
-nav li:last-of-type {
+header nav li:last-of-type {
     display: flex;
 
     align-items: center;
@@ -254,7 +244,7 @@ nav li:last-of-type {
 }
 
 
-nav ul li:last-of-type button img{
+header nav ul li:last-of-type button img{
     padding: 1em;
     width: 4em;
     height: 4em;
@@ -264,7 +254,7 @@ nav ul li:last-of-type button img{
     border: none;
 }
 
-nav li button {
+header nav li button {
     
     padding:.5em;
     width: 4em;
@@ -273,7 +263,7 @@ nav li button {
     border-radius: 1em;
 }
 
-nav button img {
+header nav button img {
     height: .5em;
 }
 
@@ -283,26 +273,26 @@ header > button {
     left: -9999em;
 }
  
-nav {
+header nav {
     position: static;
     translate: unset;
     padding: 0;
     background: none;
 }
     
-nav button {
+header nav button {
     position: absolute;
     left: -9999em;
 }
 
     
-nav ul {
+header nav ul {
     display: flex;
     gap: .5em;
     flex-wrap: wrap;  
 }
     
-nav a {
+header nav a {
     border: none;
     flex-direction: column;
 }
@@ -392,13 +382,13 @@ button [aria-label="opZnKop"]:hover main section button {
 /******************/
 
 footer{
-    padding: 7em 2em 2em 2em;
+    /* padding: 7em 2em 2em 2em; */
     margin-top: 5em;
     position: relative;
     background-color: var(--darkorange-color);
 }
 
-footer section:nth-of-type(1) img{
+footer > img{
     position: absolute;
     
     height: 40%;
@@ -415,8 +405,11 @@ footer section:nth-of-type(1) img{
     border: none;
 }
 
+footer nav:nth-of-type(1) {
+    padding: 7em 2em 2em 2em;
+}
 
-footer section:nth-of-type(2) a{
+footer nav:nth-of-type(1) a{
     padding: 1em;
     margin: .5em;
     display: flex;
@@ -433,7 +426,7 @@ footer section:nth-of-type(2) a{
     border-radius: 2em;
 }
 
-footer section:nth-of-type(3) {
+footer nav:nth-of-type(2) {
     display: flex;
     gap: .5em;
     flex-wrap: wrap;
@@ -442,7 +435,7 @@ footer section:nth-of-type(3) {
 }
 
 
-footer section:nth-of-type(3) img{
+footer nav:nth-of-type(2) img{
 
     padding: 1em;
     width: 4em;
@@ -454,13 +447,13 @@ footer section:nth-of-type(3) img{
 }
 
 
-footer section:nth-of-type(4) {
+footer nav:nth-of-type(3) {
     display: flex;
-    
-    background-color: var(--grey-brackground-color);
 
+    background-color: var(--grey-brackground-color);
+    justify-content: center;
 }
-footer section:nth-of-type(4) a{
+footer nav:nth-of-type(3) a{
     
     padding-left: .25em;
     padding-right: .25em;
@@ -470,7 +463,7 @@ footer section:nth-of-type(4) a{
     background-color: var(--grey-brackground-color);
 }
 
-footer section:nth-of-type(4) a + a{
+footer nav:nth-of-type(3) a + a{
     border-left: solid 1px var(--text-color);
 }
 
@@ -490,16 +483,20 @@ footer{
 }
 
 
-footer section:nth-of-type(2) {
+footer nav:nth-of-type(1) {
+    padding: 2em;
     display: flex;
     justify-content: center;
-
+   
 }
 
-footer section:nth-of-type(2) a{
+footer nav:nth-of-type(1) a{
     border-radius: 0;
     display: flex;
+
     justify-content: center;
+   
+    border-radius: 2em;
     
 }
 
