--- a/styles/style1.0.css
+++ b/styles/style1.0.css
@@ -30,14 +30,18 @@
 	--coffee-background-color: #ddbd8e;
 	--darkcoffee-backgroun-color: #d6b687;
 	--state-color: lime; 
+	--selection-background-color: blue;
+    
 
-	--font-size-h2: 4em;
-	--font-size-h3: 2em;
-	--font-size-p: 1em;
-
-
-
+    --font-size-h1: 6em;
+    --font-size-h2: 4em;
+    --font-size-h3: 2em;
+    --font-size-p: 1em;
 }
+::selection {
+    background-color: var(--selection-background-color);
+    color: var(--grey-brackground-color);
+  }
 
 /****************************************/
 /*              STYLING                 */
