--- a/styles/style_3.0.css
+++ b/styles/style_3.0.css
@@ -30,6 +30,8 @@ box-sizing:border-box;
     --coffee-background-color: #ddbd8e;
     --darkcoffee-backgroun-color: #d6b687;
     --state-color: lime; 
+    --selection-background-color: blue;
+    
 
     --font-size-h1: 6em;
     --font-size-h2: 4em;
@@ -40,10 +42,14 @@ box-sizing:border-box;
     color-scheme: light dark; 
 	--text-color: light-dark(Black, white); 
 	--white-background-color: light-dark(white, Black); 
+    --nav-text-color: light-dark(#512d0e, #ec4dac);
+   }
+
+   ::selection {
+    background-color: var(--selection-background-color);
+    color: var(--grey-brackground-color);
+  }
   
-
-   } 
-
    html:has([value="light"]:checked) { 
     color-scheme: light; 
    } 
@@ -56,6 +62,8 @@ box-sizing:border-box;
     color: var(--text-color); 
     background-color: var(--white-background-color); 
 }
+
+
 
 
 /****************************************/
