--- a/styles/style_2.0.css
+++ b/styles/style_2.0.css
@@ -16,23 +16,37 @@
   /* CUSTOM PROPERTIES */
   /*********************/
   :root {
-	  --text-color:#111;
-	  --nav-text-color: #512d0e;
-	  --white-background-color:#ffffff;
-	  --grey-brackground-color: #f5f5f5;
-	  --pink-color: #ec4390;
-	  --pink-button-color: #ec4dac;
-	  --orange-color: #ef6c38;
-	  --darkorange-color: #ea4933;
-	  --grey-brackground-color: #f5f5f5;
-	  --grey-text-color: #adadad;
-	  --blue-background-color: #99d6ea;
-	  --coffee-background-color: #ddbd8e;
-	  --darkcoffee-backgroun-color: #d6b687;
-	  --state-color: lime; 
-  
-	  --font-size-h2: 4em;
-	  --font-size-h3: 2em;
-	  --font-size-p: 1em;
-  
+    --text-color:#111;
+    --nav-text-color: #512d0e;
+    --white-background-color:#ffffff;
+    --grey-brackground-color: #f5f5f5;
+    --pink-color: #ec4390;
+    --pink-button-color: #ec4dac;
+    --orange-color: #ef6c38;
+    --darkorange-color: #ea4933;
+    --grey-brackground-color: #f5f5f5;
+    --grey-text-color: #adadad;
+    --blue-background-color: #99d6ea;
+    --coffee-background-color: #ddbd8e;
+    --darkcoffee-backgroun-color: #d6b687;
+    --state-color: lime; 
+    --selection-background-color: blue;
+    
+
+    --font-size-h1: 6em;
+    --font-size-h2: 4em;
+    --font-size-h3: 2em;
+    --font-size-p: 1em;
+
+
+    color-scheme: light dark; 
+	--text-color: light-dark(Black, white); 
+	--white-background-color: light-dark(white, Black); 
+    --nav-text-color: light-dark(#512d0e, #ec4dac);
+   }
+
+   ::selection {
+    background-color: var(--selection-background-color);
+    color: var(--grey-brackground-color);
   }
+  
